[package]
name = "reverse_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
# hyper = { version = "0.14.12", features = ["server"] }
# hyper-rustls = "0.23.2"
log4rs = "1.2.0"
tokio = { version = "1.14.1", features = ["macros", "rt", "rt-multi-thread"] }
anyhow = "1.0.69"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
reqwest = { version = "0.11.5", features = ["blocking"] }
log = "0.4"
serde_yaml = "0.9.17"